Z-index slight fix

--- a/styles-updated.scss
+++ b/styles-updated.scss
@@ -108,7 +108,7 @@ $overlay-opacity-time: 2s;
 	height: 100vh;
 	top: 0;
 	left: 0;
-	transition: all ease-out 3s;
+	transition: all ease-out 3s, z-index 0ms;
 	z-index: 12;
 	transform-origin: 1% center;
 	transform: rotate3d(.01, 1, .01, -90deg);
@@ -118,7 +118,7 @@ $overlay-opacity-time: 2s;
 	height: 100vh;
 	top: 0;
 	left: 0;
-	transition: all ease-in-out 2s;
+	transition: all ease-in-out 2s, z-index 0ms;
 	z-index: 10;
 }
 @mixin doordiv {
